[tool.poetry]
name = "dadbot"
version = "0.1.0"
description = "An Unhelpful Discord Bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
toml = "^0.10.2"
"discord.py" = { git = "https://github.com/Rapptz/discord.py" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
